force-app/main/default/objects/PropertyExpense__c.object
<CustomObject>
    <description>This object keeps the records of Property Expenses</description>
    <label>Property Expense</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>