force-app/main/default/objects/PropertyExpense__c/fields/Include_In_GDS__c.field-meta.xml
<CustomField>
    <fullName>Include_In_GDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In GDS</label>
    <type>Checkbox</type>
</CustomField>