force-app/main/default/objects/PropertyExpense__c/fields/Include_In_TDS__c.field-meta.xml
<CustomField>
    <fullName>Include_In_TDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In TDS</label>
    <type>Checkbox</type>
</CustomField>