force-app/main/default/objects/PropertyExpense__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Application Associated with the Expense</description>
    <inlineHelpText>Loan Application Associated with the Expense</inlineHelpText>
    <label>Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Property Expenses</relationshipLabel>
    <relationshipName>Property_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>