force-app/main/default/objects/PropertyExpense__c/fields/Loan_Application_Property__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application Property</label>
    <referenceTo>LoanApplicationProperty</referenceTo>
    <relationshipLabel>Property Expenses</relationshipLabel>
    <relationshipName>PropertyExpenses</relationshipName>
    <type>Lookup</type>
</CustomField>