force-app/main/default/objects/PropertyExpense__c/fields/Monthly_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expense_Amount__c</fullName>
    <label>Monthly Expense Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>