force-app/main/default/objects/PropertyExpense__c/fields/Percent_In_GDS__c.field-meta.xml
<CustomField>
    <fullName>Percent_In_GDS__c</fullName>
    <label>Percent In GDS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>