force-app/main/default/objects/PropertyExpense__c/fields/propertyExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>propertyExpenseAmount__c</fullName>
    <label>Expense Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>