force-app/main/default/objects/PropertyExpense__c/fields/propertyExpensePeriod__c.field-meta.xml
<CustomField>
    <fullName>propertyExpensePeriod__c</fullName>
    <label>Expense Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>