force-app/main/default/objects/PropertyExpense__c/fields/propertyExpenseType__c.field-meta.xml
<CustomField>
    <fullName>propertyExpenseType__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Condo Fees</fullName>
            </value>
            <value>
                <fullName>General Expenses</fullName>
            </value>
            <value>
                <fullName>Heating Expense</fullName>
            </value>
            <value>
                <fullName>Hydro</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Interest Charges</fullName>
            </value>
            <value>
                <fullName>Management Expenses</fullName>
            </value>
            <value>
                <fullName>Municipal Taxes</fullName>
            </value>
            <value>
                <fullName>Repairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>