force-app/main/default/objects/PropertyExpense__c/fields/propertyExpenseTypeDd__c.field-meta.xml
<CustomField>
    <fullName>propertyExpenseTypeDd__c</fullName>
    <label>propertyExpenseTypeDd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>