force-app/main/default/objects/PropertyExpense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application_Property__c</columns>
    <columns>propertyExpenseAmount__c</columns>
    <columns>propertyExpensePeriod__c</columns>
    <columns>propertyExpenseType__c</columns>
    <columns>FilogixId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>